# monitorizacion-ia

./: AGENTS.md  Makefile  README.md
docs/: uso-y-extension.md
monitorizacion-ia-python/: README.md  pyproject.toml
monitorizacion-ia-python/docs/: legacy-scope.md
monitorizacion-ia-python/src/: main.py
monitorizacion-ia-python/src/app/: settings.py  unicaja_services_config.py
monitorizacion-ia-python/src/monitorizacion_ia_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
monitorizacion-ia-python/src/orchestrator/: main.py
monitorizacion-ia-python/tests/: conftest.py  requirements.txt  test_adapter_registry.py  test_main.py  test_native_adapter_local_json.py  test_orchestrator_smoke.py  test_settings.py  test_unicaja_services_config.py  test_use_case_loader_validation.py  test_view_config_store.py
monitorizacion-ia-python/tests/exceptions/: test_app_exceptions.py
monitorizacion-ia-python/tests/managers/: test_context.py  test_data_interviniente_item.py  test_data_operacion_item.py  test_distributed_context.py  test_items.py  test_manager_cliente.py  test_manager_gestor.py  test_manager_interviniente.py  test_manager_operacion.py  test_manager_recomendacion.py  test_managers.py  test_session_manager.py
monitorizacion-ia-python/tests/models/: test_models.py
monitorizacion-ia-python/tests/repositories/: test_context_repository.py  test_database_connector.py  test_session_dao.py  test_sql_server_repository.py
monitorizacion-ia-python/tests/routes/: test_routes_get_context_item.py  test_routes_get_sesion_list.py  test_routes_procesar.py
(+157 files in other folders)
